<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:background="@color/white"
        android:paddingTop="@dimen/margin_8"
        android:paddingBottom="@dimen/margin_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_8"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_12"
            android:layout_width="48dp"
            android:layout_height="@dimen/margin_48"
            android:src="@drawable/ic_arrow_back_small"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.boilerplate.uikit.views.textviews.text18.TextViewBold18
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_out_reports"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_date_range"
        android:background="@color/background_secondary"
        android:paddingLeft="@dimen/margin_12"
        android:paddingTop="@dimen/margin_12"
        android:paddingRight="@dimen/margin_12"
        android:paddingBottom="@dimen/margin_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_12"
        app:layout_constraintTop_toBottomOf="@+id/header">
        <com.boilerplate.uikit.views.textviews.text12.TextViewBold12
            android:textSize="@dimen/text_14"
            android:gravity="center_vertical"
            android:id="@+id/tv_from_date"
            android:background="@drawable/rounded_border_edittext_background_100"
            android:padding="@dimen/margin_10"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:drawablePadding="@dimen/margin_8"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_calendar"/>
        <View
            android:layout_width="@dimen/margin_12"
            android:layout_height="1dp"/>
        <com.boilerplate.uikit.views.textviews.text12.TextViewBold12
            android:textSize="@dimen/text_14"
            android:gravity="center_vertical"
            android:id="@+id/tv_to_date"
            android:background="@drawable/rounded_border_edittext_background_100"
            android:padding="@dimen/margin_10"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:drawablePadding="@dimen/margin_8"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_calendar"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_table_header"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_4"
        android:layout_marginRight="@dimen/margin_4"
        android:layout_marginHorizontal="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@+id/ll_date_range">
        <com.boilerplate.uikit.views.textviews.text14.TextViewBold14
            android:gravity="center"
            android:paddingTop="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="0.6"
            android:paddingVertical="@dimen/margin_8"/>
        <View
            android:background="@color/divider_color"
            android:layout_width="@dimen/margin_1"
            android:layout_height="match_parent"/>
        <com.boilerplate.uikit.views.textviews.text14.TextViewBold14
            android:gravity="start|center_vertical"
            android:paddingLeft="@dimen/margin_8"
            android:paddingTop="@dimen/margin_8"
            android:paddingRight="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_weight="1.5"
            android:paddingHorizontal="@dimen/margin_8"
            android:paddingVertical="@dimen/margin_8"/>
        <View
            android:background="@color/divider_color"
            android:layout_width="@dimen/margin_1"
            android:layout_height="match_parent"/>
        <com.boilerplate.uikit.views.textviews.text14.TextViewBold14
            android:gravity="start|center_vertical"
            android:paddingTop="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rupee_amount"
            android:layout_weight="1.2"
            android:paddingStart="@dimen/margin_8"
            android:paddingVertical="@dimen/margin_8"/>
    </LinearLayout>
    <View
        android:id="@+id/header_divider"
        android:background="@color/divider_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_table_header"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_transactions"
        android:background="@color/white"
        android:paddingBottom="@dimen/margin_40"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_4"
        android:layout_marginRight="@dimen/margin_4"
        android:layout_marginHorizontal="@dimen/margin_4"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/ll_share_buttons"
        app:layout_constraintTop_toBottomOf="@+id/header_divider"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_share_buttons"
        android:background="@color/white"
        android:padding="@dimen/margin_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/margin_4"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:textColor="@color/white"
            android:id="@+id/btn_share_pdf"
            android:background="@drawable/rounded_white_blue_corner_100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_pdf"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/margin_8"/>
        <com.boilerplate.uikit.views.textviews.text16.TextViewBoldWhite16
            android:gravity="center"
            android:id="@+id/btn_share_whatsapp"
            android:background="@drawable/rounded_green_corner_100"
            android:padding="@dimen/margin_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_weight="1"
            android:drawableStart="0x7f080167"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
