<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_close"
        android:padding="@dimen/margin_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/ic_close"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="@dimen/margin_24"
            android:src="@drawable/ic_check_green"/>
        <com.boilerplate.uikit.views.textviews.text22.TextViewBold22
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_12"
            android:text="@string/subscription_activated"/>
        <com.boilerplate.uikit.views.textviews.text16.TextViewRegular16
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_32"
            android:layout_marginRight="@dimen/margin_32"
            android:text="@string/you_now_have_access_to_all_premium_features"
            android:layout_marginHorizontal="@dimen/margin_32"/>
    </LinearLayout>
    <com.boilerplate.uikit.views.buttons.RoundedPrimaryButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_48"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginRight="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_24"
        android:text="@string/ok"
        android:layout_marginHorizontal="@dimen/margin_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
