<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_back"
            android:padding="@dimen/margin_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.boilerplate.uikit.views.textviews.text16.TextViewBold16
            android:id="@+id/tv_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/iv_refresh_contacts"
            android:padding="@dimen/margin_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_staff"
        android:background="@drawable/rounded_edittext_background_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_12"
        android:layout_marginVertical="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/ll_add_staff"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/iv_add_staff"
                android:padding="@dimen/margin_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_staff_primary_color"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <com.boilerplate.uikit.views.textviews.text14.TextViewRegularPrimaryColor14
                    android:textColor="@color/color_primary"
                    android:id="@+id/tv_add_staff_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_staff_manually"/>
                <com.boilerplate.uikit.views.textviews.text12.TextViewRegular12
                    android:textColor="@color/sub_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_contact_staff_info"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_chevron"
                android:padding="@dimen/margin_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_down"/>
        </LinearLayout>
        <EditText
            android:textSize="@dimen/text_14"
            android:textColorHint="@color/hint_text_color"
            android:id="@+id/et_staff_name"
            android:background="@drawable/rounded_border_edittext_background_100"
            android:padding="@dimen/margin_10"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_16"
            android:hint="@string/enter_staff_name"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="@dimen/margin_12"
            android:layout_marginVertical="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_add_staff"/>
        <EditText
            android:textSize="@dimen/text_14"
            android:textColorHint="@color/hint_text_color"
            android:id="@+id/et_staff_mobile_number"
            android:background="@drawable/rounded_border_edittext_background_100"
            android:padding="@dimen/margin_10"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_12"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:layout_marginHorizontal="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_staff_name"/>
        <com.boilerplate.uikit.views.buttons.PrimaryButton
            android:id="@+id/btn_add_staff"
            android:padding="@dimen/margin_10"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/add_labour"
            android:layout_marginHorizontal="@dimen/margin_12"
            android:layout_marginVertical="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_staff_mobile_number"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_add_staff_tool_tip"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_add_staff">
        <com.boilerplate.uikit.views.textviews.text14.TextViewRegular14
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_not_saved_add_here"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_curved_arrow"/>
    </LinearLayout>
    <EditText
        android:textSize="@dimen/text_14"
        android:textColorHint="@color/hint_text_color"
        android:id="@+id/et_search_contacts"
        android:background="@drawable/rounded_border_edittext_background_100"
        android:padding="@dimen/margin_12"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12"
        android:hint="@string/search_by_name_or_mobile_number"
        android:drawablePadding="@dimen/margin_8"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_add_staff"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_contacts"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginRight="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_12"
        android:layout_marginHorizontal="@dimen/margin_12"
        android:layout_marginVertical="@dimen/margin_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search_contacts">
        <com.boilerplate.uikit.views.textviews.text12.TextViewRegular12
            android:id="@+id/tv_staffs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_saved_contacts"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_contacts"
            android:background="@drawable/rounded_edittext_background_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search_contacts"/>
    <com.boilerplate.uikit.views.textviews.text16.TextViewBold16
        android:id="@+id/et_no_result_found"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_result_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search_contacts"/>
</androidx.constraintlayout.widget.ConstraintLayout>
